<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.xo.Statistic"
    android:orientation="vertical"
    android:gravity="start">
<LinearLayout
    android:layout_marginTop="50dp"
    android:gravity="start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_name" />
    <TextView
        android:id="@+id/TvplayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_game" />
        <TextView
            android:id="@+id/TvLastGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_games" />
        <TextView
            android:id="@+id/TvTotalWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_x_won" />
        <TextView
            android:id="@+id/xwon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_o_won" />
        <TextView
            android:id="@+id/owon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_draw_precent" />
        <TextView
            android:id="@+id/drawprecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginEnd="20dp"
            android:id="@+id/BtnBac"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:onClick="onClick"
            android:text="@string/back_to_game" />

        <Button
            android:id="@+id/BtnSc"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:onClick="onClick"
            android:text="@string/send_score" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="SharedBoard"
            android:text="@string/share_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/statistika" />
</LinearLayout>