<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.xo.SendSms">

    <Button
        android:id="@+id/BtnSend"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/BtnPick"
        android:layout_alignBottom="@+id/BtnPick"
        android:layout_alignEnd="@+id/EtPho"
        android:layout_marginEnd="14dp"
        android:onClick="onClick"
        android:text="@string/send" />

    <TextView
        android:id="@+id/EtMass"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/massege"
        android:inputType="textPersonName"
        android:textSize="40sp" />

    <Button
        android:id="@+id/BtnPick"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_above="@+id/BtnBa"
        android:layout_marginBottom="22dp"
        android:layout_toStartOf="@+id/imageView5"
        android:onClick="onClick"
        android:text="@string/pick" />

    <TextView
        android:id="@+id/EtName"
        android:layout_width="129dp"
        android:layout_height="29dp"
        android:layout_above="@+id/EtPho"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:textSize="27sp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EtPho"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EtMass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:hint="@string/phone_number" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_toEndOf="@+id/EtName"
        app:srcCompat="@drawable/msboards" />

    <Button
        android:id="@+id/BtnBa"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:onClick="onClick"
        android:text="Back" />


</RelativeLayout>
